--- a/gathergenius.html
+++ b/gathergenius.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
+    
 <div class="container">
     <h1>Welcome to GatherGenius </h1>
     <!-- Filter Button -->
@@ -40,6 +40,6 @@
     <div id="events-container"></div>
 </div>
 
-<script src="script.js" defer></script>
+<script defer src="script.js" ></script>
 </body>
 </html>
