--- a/home.html
+++ b/home.html
@@ -9,20 +9,28 @@
 <body>
     <!-- Header Section -->
     <header class="site-header">
-        <a href="home.html" class="logo-link">
-            <img src="logo.png" alt="GatherGenius Logo" class="logo">
-        </a>
+        <!-- Logo -->
+        <div class="logo">
+            <img src="logo.png" alt="GatherGenius Logo">
+        </div>
+        <!-- Search Events Button -->
+        <div class="search-events-button">
+            <a href="gathergenius.html">Search Events</a>
+        </div>
     </header>
-
-    <!-- Welcome Message Section -->
     <section class="welcome-section">
         <div class="welcome-message">
-            <h1>Introducing GatherGenius, a ticket booking service with a focus on simplicity and efficiency.
-            </h1>
-            <p>Explore our events <a href="gathergenius.html">here</a>.</p>
+            <h1>Welcome to GatherGenius.</h1>
+        </section>
+    <!-- Login Box Section -->
+    <section class="login-section">
+        <!-- Login Box -->
+        <div class="login-box">
+            <h1>Login</h1>
+            <input type="email" placeholder="Email">
+            <input type="password" placeholder="Password">
+            <button>Login</button>
         </div>
     </section>
-
-    
 </body>
 </html>
