--- a/gathergenius.html
+++ b/gathergenius.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ticket Booking</title>
     <link rel="stylesheet" href="style.css">
-</head>
+</head>1
 <body>
     
 <div class="container">
