--- a/gathergenius.html
+++ b/gathergenius.html
@@ -3,43 +3,75 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ticket Booking</title>
+    <title>Gather Genius</title>
     <link rel="stylesheet" href="style.css">
-</head>1
+</head>
 <body>
-    
-<div class="container">
-    <h1>Welcome to GatherGenius </h1>
-    <!-- Filter Button -->
-    <button id="filter-button">Filters</button>
+    <div class="container">
+        <h1>Welcome to Gather Genius, <span id="username"></span></h1>
+        <!-- Filter Button -->
+        <button id="filter-button">Filters</button>
 
-    <!-- Filter Form -->
-    <form id="filter-form" class="hidden">
-        <label for="keyword">Keyword:</label>
-        <input type="text" id="keyword" name="keyword">
+        <!-- Filter Form -->
+        <form id="filter-form" class="hidden">
+            <label for="keyword">Keyword:</label>
+            <input type="text" id="keyword" name="keyword">
 
-        <label for="minPrice">Minimum Price:</label>
-        <input type="number" id="minPrice" name="minPrice" step="0.01" min="0">
+            <label for="minPrice">Minimum Price:</label>
+            <input type="number" id="minPrice" name="minPrice" step="0.01" min="0">
 
-        <label for="maxPrice">Maximum Price:</label>
-        <input type="number" id="maxPrice" name="maxPrice" step="0.01" min="0">
+            <label for="maxPrice">Maximum Price:</label>
+            <input type="number" id="maxPrice" name="maxPrice" step="0.01" min="0">
 
-        <label for="minTeamSize">Minimum Team Size:</label>
-        <input type="number" id="minTeamSize" name="minTeamSize" min="1">
+            <label for="minTeamSize">Minimum Team Size:</label>
+            <input type="number" id="minTeamSize" name="minTeamSize" min="1">
 
-        <label for="maxTeamSize">Maximum Team Size:</label>
-        <input type="number" id="maxTeamSize" name="maxTeamSize" min="1">
+            <label for="maxTeamSize">Maximum Team Size:</label>
+            <input type="number" id="maxTeamSize" name="maxTeamSize" min="1">
 
-        <label for="certification">Certification Required:</label>
-        <input type="checkbox" id="certification" name="certification">
+            <label for="certification">Certification Required:</label>
+            <input type="checkbox" id="certification" name="certification">
 
-        <input type="submit" value="Apply Filters">
-    </form>
+            <input type="submit" value="Apply Filters" id="apply-filters-button">
+        </form>
 
-    <!-- Events Container -->
-    <div id="events-container"></div>
-</div>
+        <!-- Events Container -->
+        <div id="events-container">
+            <!-- Sample Event 1 -->
+            <a href="booking.html" class="event-link">
+                <div class="event">
+                    <h3>Event Name 1</h3>
+                    <p>Date: Event Date 1</p>
+                    <p>Location: Event Location 1</p>
+                    <p>Description: Event Description 1</p>
+                    <p>Ticket Price: $Event Price 1</p>
+                    <p>Team Size: Event Team Size 1</p>
+                    <p>Certification Required: Event Certification Required 1</p>
+                </div>
+            </a>
+            <!-- Sample Event 2 -->
+            <a href="booking.html">
+                <div class="event">
+                    <h3>Event Name 2</h3>
+                    <p>Date: Event Date 2</p>
+                    <p>Location: Event Location 2</p>
+                    <p>Description: Event Description 2</p>
+                    <p>Ticket Price: $Event Price 2</p>
+                    <p>Team Size: Event Team Size 2</p>
+                    <p>Certification Required: Event Certification Required 2</p>
+                </div>
+            </a>
+            <!-- Repeat the above structure for remaining events -->
+        </div>
+    </div>
 
-<script defer src="script.js" ></script>
+    <script defer src="script.js"></script>
+    <script>
+        // Retrieve username from sessionStorage
+        const username = sessionStorage.getItem("username");
+
+        // Display the username on the page
+        document.getElementById("username").textContent = username;
+    </script>
 </body>
 </html>
