--- a/home.html
+++ b/home.html
@@ -27,9 +27,8 @@
         <!-- Login Box -->
         <div class="login-box">
             <h1>Login</h1>
-            <input type="email" placeholder="Email">
-            <input type="password" placeholder="Password">
-            <button>Login</button>
+            <!-- Redirect to login.html on button click -->
+            <button onclick="window.location.href='login.html'">Login</button>
         </div>
     </section>
 </body>
